# ed25519-streaming

./: CMakeLists.txt  README.md
src/: test_ed.c  verify_reference.c  verify_streaming.c
src/streaming/: edsign.c
test/: test_ed.sh
